# gaudi-nursery

./: CMakeLists.txt  NOTICE  README.md
GaudiHelloWorld/: CMakeLists.txt
GaudiHelloWorld/options/: hello_options.py
GaudiHelloWorld/src/: HelloWorldEx.cxx  HelloWorldEx.h
PartPropTest/: CMakeLists.txt
PartPropTest/options/: options.py
PartPropTest/src/: PartPropTest.cxx  PartPropTest.h  ppt.cxx  ppt.h
src/: main.cxx
